@startuml
title Diagrama de clases - CineVerse 🎬

class administrador {
  + id_admin : INT
  + usuario : VARCHAR(100)
  + contrasena : VARCHAR(255)
}

class usuario {
  + id_usuario : INT
  + nombre_usuario : VARCHAR(100)
  + correo : VARCHAR(150)
  + num_tel : VARCHAR(20)
  + contrasena : VARCHAR(255)
}

class pelicula {
  + id_pelicula : INT
  + titulo : VARCHAR(255)
  + anio_salida : YEAR
  + director : VARCHAR(255)
  + resumen : TEXT
  + genero : ENUM
  + disponible : BOOLEAN
  + valoracion : DECIMAL(3,1)
}

class resena {
  + id_resena : INT
  + valoracion : DECIMAL(3,1)
  + texto : TEXT
  + fecha : TIMESTAMP
}

class lista {
  + id_lista : INT
  + nombre_lista : VARCHAR(100)
}

class lista_pelicula {
  + id_lista : INT
  + id_pelicula : INT
}

class alquiler {
  + id_usuario : INT
  + id_pelicula : INT
  + fecha_alquiler : TIMESTAMP
  + fecha_devolucion : TIMESTAMP
  + precio : DECIMAL(6,2)
}

' ========================
' RELACIONES
' ========================
usuario "1" -- "0..*" resena : escribe >
pelicula "1" -- "0..*" resena : recibe >

usuario "1" -- "0..*" lista : posee >
lista "1" -- "0..*" lista_pelicula : contiene >
pelicula "1" -- "0..*" lista_pelicula : aparece_en >

usuario "1" -- "0..*" alquiler : realiza >
pelicula "1" -- "0..*" alquiler : es_alquilada_en >

@enduml